syntax = "proto3";
package proto;
option go_package = "./;proto";
import "google/protobuf/timestamp.proto";

service FleetService{
  rpc Search(SearchRequest)returns(SearchResponse){}
}

message PagingRequest {
  int32 page = 1;
  int32 item_per_page = 2;
}

message PagingResponse {
  int32 total = 1;
}

message Fleet {
  string fleet_number = 1;
  string kd_pool = 2;
  string license_number = 3;
  string area = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message SearchRequest{
  string keyword = 1;
  string area = 2;
  PagingRequest paging = 3;
}

message SearchResponse{
  PagingResponse paging = 1;
  repeated Fleet fleets = 2;
}
